Enable rotation heuristic for MediaStreams for all platforms.

It was originally enabled only on Android, but the bug the heuristic
fixes has been reported on Microsoft Surface devices running Windows.

BUG=746000

Change-Id: Ibb4214cc6c461012679c84e33a977ccf2fe1ff01
Reviewed-on: https://chromium-review.googlesource.com/594407
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490900}